add admin read project schema
