# apps/api/schemas/__init__.py
@@ -1,2 +1,2 @@
-from .projects import ProjectSummary, ProjectDetail, ProjectCreate, ProjectUpdate
+from .projects import ProjectSummary, ProjectDetail, ProjectCreate, ProjectUpdate, ProjectAdminRead
 from .tags import TagRead, TagCreate, TagBase, TagUpdate
